--- a/src/components/field/field.css
+++ b/src/components/field/field.css
@@ -43,9 +43,27 @@
     left: 5px;
   }
   
-  .form-container .field.active span {
+  .form-container .field span.active  {
     position: absolute;
     /* top: -20px; */
     transform: translate(-0px, -20px);
     transition: 0.3s all;
+  }
+
+  .form-container .field .error-field {
+    position: absolute;
+    bottom: -20px;
+    font-size: 10px;
+    padding: 1px 5px;
+    background-color: #bb0b0b7f;
+    border-radius: 5px;
+    border: 1px solid #a00f0f8f;
+    transform: scale(0);
+    opacity: 0;
+    transition: .2s all;
+  }
+
+  .form-container .field .error-field.active {
+    transform: scale(1);
+    opacity: 1;
   }
