--- a/src/components/fieldDate/fieldDate.css
+++ b/src/components/fieldDate/fieldDate.css
@@ -1,4 +1,5 @@
 .field-date {
+  position: relative;
   cursor: pointer;
 }
 
@@ -21,3 +22,21 @@
     cursor: pointer;
     border-radius: 3px;
 }
+
+.form-container .field-date .error-field {
+    position: absolute;
+    bottom: -20px;
+    font-size: 10px;
+    padding: 1px 5px;
+    background-color: #bb0b0b7f;
+    border-radius: 5px;
+    border: 1px solid #a00f0f8f;
+    transform: scale(0);
+    opacity: 0;
+    transition: .2s all;
+  }
+
+  .form-container .field-date .error-field.active {
+    transform: scale(1);
+    opacity: 1;
+  }
