--- a/src/components/field/field.css
+++ b/src/components/field/field.css
@@ -1,11 +1,54 @@
 .form-container .field {
     position: relative;
-    width: 70%;
+    width: 80%;
     transition: 0.3s all;
     cursor: pointer;
+    background: #2b2b2cb5;
+    padding: 7px 15px;
+    border-radius: 7px;
+    display: flex;
+    align-items: center;
   }
+
+.form-container .field.focus {
+  box-shadow: 0 0 4px 2px rgba(68, 68, 176, 0.82);
+}
+
+.form-container .field .wrapper {
+  width: 100%;
+  position: relative;
+  display: flex;
+}
+
+.form-container .field .success,
+.form-container .field .failed,
+.form-container .field-date .success,
+.form-container .field-date .failed {
+  position: absolute;
+  right: -35px;
+  background-image: url('../../../assets/checked.png');
+  background-size: cover;
+  background-position: center;
+  transform: scale(0);
+  width: 30px;
+  height: 30px;
+  transition: .3s;
+}
+
+.form-container .field .failed,
+.form-container .field-date .failed {
+  background-image: url('../../../assets/cancel.png');
+}
+
+.form-container .field .success.active,
+.form-container .field .failed.active,
+.form-container .field-date .success.active,
+.form-container .field-date .failed.active {
+  transform: scale(1);
+}
+
   
-  .form-container .field::after {
+  /* .form-container .field::after {
     content: '';
     position: absolute;
     width: 100%;
@@ -15,11 +58,13 @@
     bottom: 0;
     border-radius: 10px;
     width: 88%;
-  }
+  } */
   
   .form-container .field input {
     outline: none;
     width: 88%;
+    position: relative;
+    left: 30px;
     border: none;
     background: transparent;
     color: #fff;
@@ -30,42 +75,51 @@
   .form-container .field .icon {
     position: absolute;
     font-family: sans-serif;
-    right: 0;
-    bottom: 3px;
-    font-size: 26px;
-    color: rgb(212, 208, 212);
-  }
-  
-  .form-container .field b.icon {
+    left: -12px;
+    top: -3px;
     font-size: 22px;
+    color: #fcfcfc;
+    background-color: rgba(255, 255, 255, 0.15);
+    border-radius: 50%;
+    padding: 5px;
+    /* text-shadow: 2px 2px 2px rgb(91, 91, 196); */
+  }
+
+  .form-container .field .icon.focus {
+    box-shadow: 2px 2px 3px rgb(91, 91, 196);
   }
   
   .form-container .field span {
     position: absolute;
-    left: 5px;
+    left: 30px;
   }
   
   .form-container .field span.active  {
     position: absolute;
     /* top: -20px; */
-    transform: translate(-0px, -20px);
+    text-shadow: 2px 2px 2px rgb(91, 91, 196);
+    padding: 2px 4px 0px;
+    transform: translate(-24px, -22px);
     transition: 0.3s all;
   }
 
   .form-container .field .error-field {
     position: absolute;
+    left: 0;
+    margin-left: auto;
     bottom: -20px;
     font-size: 10px;
     padding: 1px 5px;
-    background-color: #bb0b0b7f;
     border-radius: 5px;
-    border: 1px solid #a00f0f8f;
     transform: scale(0);
     opacity: 0;
     transition: .2s all;
   }
 
   .form-container .field .error-field.active {
+    background-color: #bb0b0b7f;
+    border: 1px solid #a00f0f8f;
+    text-shadow: none;
     transform: scale(1);
     opacity: 1;
   }
