--- a/src/components/fieldDate/fieldDate.css
+++ b/src/components/fieldDate/fieldDate.css
@@ -1,12 +1,28 @@
 .field-date {
   position: relative;
   cursor: pointer;
-  
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
 .form-container .field-date .success,
 .form-container .field-date .failed {
   top: 5px;
+}
+
+.field-date span {
+  font-size: 18px;
+}
+
+.form-container .field-date input.focus {
+  box-shadow: 0 0 4px 2px rgba(68, 68, 176, 0.82);
+  transition: .2s;
+}
+
+.form-container .field-date span.active {
+  text-shadow: 2px 2px 2px rgb(91, 91, 196);
+  transition: .2s;
 }
 
 .field-date input[type='date'] {
