--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,7 @@ body {
   position: relative;
   width: 100vw;
   height: 100vh;
+  min-height: 600px;
   justify-content: center;
   align-items: center;
   background: url(./../assets/bg2.jpg);
