--- a/src/components/loader/loader.css
+++ b/src/components/loader/loader.css
@@ -1,3 +1,4 @@
+
 .loader-container {
   position: absolute;
   width: 100%;
@@ -8,10 +9,65 @@
   align-items: center;
   top: 0;
   border-radius: 10px;
-  background: linear-gradient(315deg, rgba(30,30,198,0.20707964601769913) 9%, rgba(20,18,154,0.6814159292035398) 25%, rgba(191,24,55,0.6530973451327433) 63%, rgba(210,18,77,0.19115044247787616) 87%);
+  background: linear-gradient(315deg, rgba(30,30,198,0.20707964601769913) 9%, rgba(20, 18, 154, 0.421) 25%, rgba(191, 24, 55, 0.348) 63%, rgba(210,18,77,0.19115044247787616) 87%);
+  animation: animateBg 1s linear;
 }
 
-.loader-container .ring {
+@keyframes animateBg {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.loader {
+  position: relative;
+  width: 120px;
+  height: 120px;
+}
+
+.loader-container .loader span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: rotate(calc(18deg * var(--i)));
+}
+
+.loader-container .loader span::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background: rgba(248, 2, 2, 0.79);
+  box-shadow: 0 0 10px rgba(248, 2, 2, 0.79),
+  0 0 20px rgba(248, 2, 2, 0.79),
+  0 0 40px rgba(248, 2, 2, 0.79),
+  0 0 60px rgba(248, 2, 2, 0.79),
+  0 0 80px rgba(248, 2, 2, 0.79),
+  0 0 100px rgba(248, 2, 2, 0.79),
+  ;
+
+  animation: rotate-loader 2s linear infinite;
+  animation-delay: calc(0.1s * var(--i));
+}
+
+@keyframes rotate-loader {
+  0% {
+    transform: scale(1);
+  }
+  80%, 100% {
+    transform: scale(0);
+  }
+}
+
+/* .loader-container .ring {
   position: absolute;
   width: 150px;
   height: 150px;
@@ -73,4 +129,4 @@
   100% {
     color: transparent;
   }
-}
+} */
