--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -4,7 +4,8 @@
   z-index: 10;
   display: flex;
   flex-direction: column;
-  align-items: center; 
+  align-items: center;
+  justify-content: center;
   padding: 40px;
   gap: 30px; 
   min-width: 400px;
@@ -17,6 +18,12 @@
   backdrop-filter: blur(20px);
 }
 
+@media (max-width: 500px) {
+  .form-container {
+    min-width: 320px;
+    padding: 40px 30px 30px 0px;
+  }
+}
 
 .form-container::after {
   content: '';
