--- a/src/style.css
+++ b/src/style.css
@@ -4,11 +4,13 @@ body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
 .main-container {
   display: flex;
   position: relative;
+  padding: 0px;
   width: 100vw;
   height: 100vh;
   min-height: 600px;
