--- a/src/components/loader/loader.css
+++ b/src/components/loader/loader.css
@@ -3,6 +3,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
+  left: 0px;
   z-index: 20;
   display: flex;
   justify-content: center;
@@ -64,6 +65,42 @@
   }
   80%, 100% {
     transform: scale(0);
+  }
+}
+
+.success-loader {
+  position: absolute;
+  width: 130px;
+  height: 130px;
+  background-image: url(../../../assets/check.png);
+  background-size: cover;
+  animation: success-failed 1s linear;
+}
+
+.filed-loader {
+  position: absolute;
+  width: 130px;
+  height: 130px;
+  background-image: url(../../../assets/cancel.png);
+  background-size: cover;
+  animation: success-failed 1s linear;
+}
+
+@keyframes success-failed {
+  0%{
+    transform: rotate(360deg) scale(0);
+  }
+
+  45%{
+    transform: rotate(0deg) scale(1);
+  }
+
+  60%{
+    transform: rotate(0deg) scale(1);
+  }
+
+  1000%{
+    transform: rotate(-360deg) scale(0);
   }
 }
 
