--- a/src/components/field/field.css
+++ b/src/components/field/field.css
@@ -8,6 +8,7 @@
     border-radius: 7px;
     display: flex;
     align-items: center;
+    justify-content: center;
   }
 
 .form-container .field.focus {
