--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;600;700;800;900&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;600;700;800;900&display=swap');
 
 body {
   box-sizing: border-box;
@@ -19,7 +19,7 @@ body {
   background: url(./../assets/bg2.jpg);
   background-size: cover;
   background-position: center;
-  font-family: 'Alkatra', cursive;
+  font-family: 'Nunito', cursive;
   font-weight: 700;
   color: #fff;
 }
